--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,18 @@
 @import 'https://cdn.staticfile.org/lxgw-wenkai-screen-webfont/1.7.0/lxgwwenkaiscreen.min.css';
 
-html,
-body,
-#app {
+html {
   height: 100%;
   background-color: #f4f4f5;
 }
 
+html.dark {
+  background-color: #000 !important;
+}
+
 * {
   font-family: LXGW WenKai Screen, sans-serif;
+}
+
+.md-content a:any-link {
+  color: rgb(156, 163, 175);
 }
