--- a/src/style.css
+++ b/src/style.css
@@ -34,9 +34,17 @@ html.dark {
   border-radius: 5px;
 }
 
-.md-content pre code {
+.md-content code {
   font-family: LXGW WenKai Screen, sans-serif;
   font-size: 12px;
+}
+
+.md-content li > code,
+.md-content p > code {
+  padding: 2px 5px;
+  border-radius: 2px;
+  border: 1px solid #ccc;
+  margin: 0 4px;
 }
 
 .md-content .mentioned {
@@ -59,6 +67,7 @@ html.dark {
 .md-content img {
   max-width: 300px;
   max-height: 300px;
+  object-fit: cover;
 }
 
 html.dark .men {
@@ -75,4 +84,25 @@ html.dark .n-tabs-tab--active .men {
 
 html.dark .n-tabs-nav--bar-type {
   background-color: black;
+}
+
+.md-content table {
+  border: 1px solid #ccc;
+  border-collapse: collapse;
+  min-width: 50%;
+}
+
+.md-content li:has(input[type='checkbox']) {
+  list-style: none;
+}
+
+.md-content table td,
+.md-content table th {
+  border: 1px solid #ccc;
+  text-align: center;
+}
+
+.md-content table th {
+  background-color: #666;
+  color: white;
 }
