--- a/src/style.css
+++ b/src/style.css
@@ -110,7 +110,7 @@ html.dark .n-tabs-nav--bar-type {
 .md-content table td,
 .md-content table th {
   border: 1px solid #ccc;
-  padding: 0 10px;
+  padding: 4px 10px;
 }
 
 .md-content table th {
